--- a/src/Blog/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.es.yml
@@ -48,6 +48,9 @@ labels:
     order: Orden
 
 menu:
+    home: Inicio
+    aboutus: Quienes somos
+    news: Actualidad
     activities: Actividades
     where: ¿Dónde?
     inscriptions: Inscripciones
