--- a/src/Blog/CoreBundle/Resources/translations/messages.ca.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.ca.yml
@@ -42,6 +42,9 @@ labels:
     accept: Aceptar
 
 menu:
+    home: Inici
+    aboutus: Qui som
+    news: Actualitat
     activities: Activitats
     where: On?
     inscriptions: Inscripcions
